<resources>
    <string name="app_name">시 목록1</string>
    <string name="title01">별 헤는 밤</string>
    <string name="author01">윤동주</string>
    <string name="body01">계절이 지나가는 하늘에는가을로 가득 차있읍니다. 나는 아무 걱정도 없이가을 속의 별들을 다 헤일듯합니다. </string>
    <string name="title02">가지 않은 길</string>
    <string name="author02">로버트 프로스트</string>
    <string name="body02">단풍 든 숲 속에 두 갈래 길이 있었습니다. 한 몸이 두 길을 가지 못하기에탄식하며 한참을 서서낮은 수풀로 꺾여 내려가는 길을멀리 바라보았습니다. </string>
</resources>